# us-frb-model

./: README.md  VALIDATION.md  pyproject.toml
.github/workflows/: ci.yml
docs/: mce-feasibility.md
examples/: monetary_policy_shock.py
scripts/: check_artifact_manifest.py  check_reference_drift.py  generate_vendor_reference.sh  scenarios.py
src/frbus/: __init__.py  data.py  equations.py  exceptions.py  frbus.py  lexing.py  parse.py  runtime.py  solver.py  symbolic.py  uncertainty.py
tests/: conftest.py  test_artifact_manifest.py  test_data.py  test_parse.py  test_shock.py  test_solver.py  test_stochsim.py  test_tracking.py  test_uncertainty.py
tests/data/: vendor_shock_2026q1_2030q4.csv  vendor_shock_fiscal_egfe_2026q1_2030q4.csv  vendor_shock_tax_trp_2026q1_2030q4.csv  vendor_shock_taylor_noninertial_2026q1_2030q4.csv
