[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frbus"
version = "0.1.0"
description = "Modern, from-scratch Python implementation of the Federal Reserve's FRB/US macroeconomic model"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "sympy>=1.12",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/frbus"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
