[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frbus"
version = "0.1.0"
description = "Modern, from-scratch Python implementation of the Federal Reserve's FRB/US macroeconomic model"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "sympy>=1.12",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/frbus"]

# Ship the model definition and baseline dataset inside the wheel so a plain
# `pip install` works without a repo checkout (MacroMod issue #69). The
# directory is `_data` (not `data`) to avoid clashing with frbus/data.py.
[tool.hatch.build.targets.wheel.force-include]
"vendor/pyfrbus_package/models/model.xml" = "frbus/_data/model.xml"
"vendor/data_only_package/LONGBASE.TXT" = "frbus/_data/LONGBASE.TXT"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
